--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Características del texto</title>
-<link rel="icon" href="imagenes/foto.ico">
+<link rel="icon" href="img/foto.ico">
 
 
 <style>
